--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "API_KEY", "\"$apikey\""
+        buildConfigField "String", "API_KEY2", "\"$apikey2\""
     }
     buildTypes {
         release {
